Fix HTML structure and content errors
updated on Jan 26 2026

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     type="text/css">
 </head>
 <body>
-    <h1> my goals for the year!</h1>
+    <h1> Christopher (Kang) Peng</h1>
 
     <hr>
 
@@ -22,7 +22,7 @@
                 <a href="#html">learn html</a>
             </li>
             <li>
-                <a href="#vacation">planing a vacation</a>
+                <a href="#vacation"> Solution provider for EMS industry</a>
             </li>
         </ul>
     </nav>
@@ -87,5 +87,6 @@
     <a href="#"> back to top</a>
 </p>
 </body>
+
 
 </html>
